# libpic

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
example/: basic.py
libpic/: deposition.py  deposition_2d.py  fields.py  interpolation_2d.py  maxwell.py  maxwell_2d.py  particles.py  patch.py  pusher.py  simulation.py  species.py
libpic/boundary/: cpml.py  particles.py  utils.py
libpic/collision/: collision.py  cpu.py  nuclear_reaction.py
libpic/current/: cpu.c  cpu.py  cpu.pyi  cpu.pyx  cpu2d.c  cpu2d.pyi  cpu3d.c  cpu3d.pyi  deposition.py
libpic/interpolation/: cpu.c  cpu.py  cpu2d.c  cpu2d.pyi  cpu3d.c  cpu3d.pyi  field_interpolation.py  interpolation_2d.py  interpolation_3d.py
libpic/maxwell/: cpu.py  solver.py
libpic/patch/: __init__.py  cpu.py  hilbert.py  patch.py  sync_currents.c  sync_currents.pyi  sync_fields.c  sync_fields.pyi  sync_fields2d.c  sync_fields2d.pyi  sync_fields3d.c  sync_fields3d.pyi  sync_particles.c  sync_particles.pyi  sync_particles3d.c  sync_particles3d.pyi  sync_particles_2d.c  sync_particles_2d.pyi  sync_particles_3d.c  sync_particles_3d.pyi
libpic/pusher/: boris.py  cpu.py  photon.py  pusher.py
libpic/qed/: cpu.py  inline.py  (+5 more)
tests/: intercollision.py  nuclear_reaction.py  selfcollision.py  test_boundary_particles.py  test_collision.py  test_current_deposition.py  test_interpolation.py  test_maxwell.py  test_nuclear_reaction.py  test_pair_production.py  test_pml.py  test_radiation.py  test_sort.py  test_species.py  test_sync_fields.py  test_unified_pusher.py
(+19 files in other folders)
