[project]
name = "libpic"
description = "Particle-in-cell library for plasma physics"
version = "0.0.12.post2"
dependencies = [
    "numpy",
    "numba",
    "scipy",
    "pydantic",
    "tqdm",
    "loguru",
    "deprecated",
    "h5py"
]
requires-python = ">=3.10"

authors = [
  {name = "xsgeng", email = "xsgeng@siom.ac.cn"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["Plasma Physics", "Strong field"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/xsgeng/libpic"

[build-system]
requires = [
    "setuptools",
    "cython",
    "numpy",
]